rust/macros/tests/invalid/target/debug/deps/missing_argument_rs-55d252c9ceb331d4.d
/home/jai/Rust/Exercism/rust/macros/tests/invalid/target/debug/deps/missing_argument_rs-55d252c9ceb331d4.rmeta: missing-argument.rs

/home/jai/Rust/Exercism/rust/macros/tests/invalid/target/debug/deps/missing_argument_rs-55d252c9ceb331d4.d: missing-argument.rs

missing-argument.rs:
